# Simple

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  sources.cmake
benchmark/: CMakeLists.txt  affine-transform.cpp  mujoco-humanoid.cpp
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  module.cpp
bindings/python/core/: expose-constraints-problem.cpp  expose-contact-frame.cpp  expose-simulator.cpp
bindings/python/simple/: __init__.py
include/simple/: fwd.hpp  pch.hpp
include/simple/bindings/python/: fwd.hpp
include/simple/bindings/python/core/: constraints-problem.hpp  simulator.hpp
include/simple/core/: constraints-problem.hpp  constraints-problem.hxx  constraints-problem.txx  contact-frame.hpp  contact-frame.hxx  fwd.hpp  simulator.hpp  simulator.hxx  simulator.txx
include/simple/math/: fwd.hpp  qr.hpp
include/simple/pinocchio_template_instantiation/: aba-derivatives.txx  aba.txx  crba.txx  joint-model.txx
include/simple/utils/: visitors.hpp
sandbox/: cartpole.py  cassie_mj.py  force_action_derivative.py  four_bar_linkage.py  four_five_bar_linkage.py  go2_contact_id.py  humanoid_mj.py  pendulum.py  sim_utils.py  simulation_args.py  simulation_utils.py  test_memory.py
sandbox/robots/: four_bar_linkage.xml  four_five_bar_linkage.xml  humanoid.xml  pendulum.xml
sandbox/robots/go2/mjcf/: scene.xml
src/: CMakeLists.txt
src/core/: constraints-problem.cpp  simulator.cpp
src/pinocchio_template_instantiation/: aba-derivatives.cpp  aba.cpp  crba.cpp  joint-model.cpp
tests/: CMakeLists.txt  test-utils.hpp
tests/forward/: CMakeLists.txt  mujoco-humanoid.cpp  simulation-combine-constraints.cpp  simulation-robots.cpp  simulator-minimal.cpp  simulator.cpp  urdf-romeo.cpp
tests/python/: test_simulator_instance.py
tests/test_data/: config.h.in
